--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -12,9 +12,13 @@
 
     &__title {
         font-weight: 300;
-        color: $mainWhite;
-        font-size: 4.8rem;
+        color: $mainBlue;
+        font-size: 1.1rem;
         margin: 0;
+
+        @media (min-width: 530px) {
+            font-size: 4.8rem;
+        }
     }
 
     &__subtitle{
