--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -2,6 +2,7 @@
 @import "base/_global";
 @import "base/_variables";
 @import "modules/_large-hero";
+@import "base/_mixins";
 @import "modules/_btn";
 @import "modules/_text-animation";
 @import "modules/_btn-animation";
