--- a/app/assets/styles/modules/_btn-animation.css
+++ b/app/assets/styles/modules/_btn-animation.css
@@ -25,7 +25,7 @@
         display: inline-block;
         height: 100%;
         width: 100%;
-        border-radius: 100px;
+        /* border-radius: 100px; */
         position: absolute;
         top: 0;
         left: 0;
