--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -4,7 +4,6 @@
     text-decoration: none;
     padding:.75rem 1.2rem;
     display: inline-block;
-    
     transition: all .2s;
     position: relative;
 
@@ -13,9 +12,8 @@
     }
 
     &--large {
-        font-size: 1.25rem;
         padding: 1.1rem 1.9rem;
-        border-radius: 100px;
+        /* border-radius: 100px; */
 
         @mixin atSmall {
             font-size: 1.25rem;
