--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,5 +1,14 @@
 .large-hero {
+    border-bottom: 5px solid $mainBlue;
     position: relative;
+
+    @mixin atSmall {
+        border-bottom: 10px solid $mainBlue;
+    }
+
+    &__image {
+        display: block;
+    }
 
     &__text-content {
         position: absolute;
@@ -13,15 +22,15 @@
     &__title {
         font-weight: 300;
         color: $mainBlue;
-        font-size: 1.1rem;
+        font-size: 2rem;
         margin: 0;
 
         @mixin atSmall {
-            font-size: 2rem;
+            font-size: 2.8rem;
         }
-
-        @mixin atMedium {
-            font-size: 3.2rem;
+        
+        @mixin atMedium{
+            font-size: 3.8rem;
         }
 
         @mixin atLarge {
@@ -32,7 +41,7 @@
     &__subtitle{
         font-weight: 300;
         color: $mainWhite;
-        font-size: 1.1rem;
+        font-size: 1.5rem;
         margin: 0;
 
         @mixin atSmall {
@@ -42,12 +51,16 @@
 
     &__description {
         color: $mainWhite;
-        font-size: 1.875rem;
+        font-size: 1.1rem;
         font-weight: 100;
         text-shadow: 2px 2px 0 rgba(0, 0, 0, .1);
         max-width: 30rem;
         margin-left: auto;
         margin-right: auto;
+
+        @mixin atSmall {
+            font-size: 1.875rem;
+        }
     }
     
 }
