--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,10 +1,21 @@
 @import "normalize.css";
+
 @import "base/_global";
 @import "base/_variables";
-@import "modules/_large-hero";
 @import "base/_mixins";
+
 @import "modules/_btn";
+@import "modules/_wrapper";
+@import "modules/_large-hero";
+
+@import "modules/_page-section";
+@import "modules/_headline";
+
+@import "modules/_row";
+
 @import "modules/_text-animation";
 @import "modules/_btn-animation";
+
+
 
 
