--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -9,16 +9,34 @@
     &--gutters > div {
         padding-right: 65px;
     }
+
+    &__b-margin-until-medium {
+        margin-bottom: 1rem;
+    }
     
     @mixin atMedium {
-        &__medium-4{
+
+
+        &__b-margin-until-medium {
+            margin-bottom: 0;
+        }
+
+        &__medium-4 {
             float: left;
             width: 33.33%;
+
+            &--larger {
+                width: 37%;
+            }
         }
     
-        &__medium-8{
+        &__medium-8 {
             float: left;
             width: 66.66%;
+
+            &--smaller {
+                width: 63%;
+            }
         }
-    }
+    } 
 }
