--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,8 +1,9 @@
 @import "normalize.css";
 
-@import "base/_global";
 @import "base/_variables";
 @import "base/_mixins";
+
+@import "base/_global";
 
 @import "modules/_btn";
 @import "modules/_wrapper";
@@ -12,6 +13,8 @@
 @import "modules/_headline";
 
 @import "modules/_row";
+@import "modules/_generic-content-container";
+
 
 @import "modules/_text-animation";
 @import "modules/_btn-animation";
