Section Feature PART I

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -14,7 +14,9 @@
 
 @import "modules/_row";
 @import "modules/_generic-content-container";
+@import "modules/_section-title";
 
+@import "modules/_feature-item";
 
 @import "modules/_text-animation";
 @import "modules/_btn-animation";
