--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -2,6 +2,10 @@
 
     @mixin clearfix;
 
+    &--t-padding {
+        padding-top: 80px;
+    }
+
     &--gutters {
         margin-right: -65px;
     }
@@ -9,6 +13,10 @@
     &--gutters-large {
         margin-right: -100px;
     }
+
+    /* &--gutters-small {
+        margin-right: -45px;
+    } */
 
     &--gutters > div {
         padding-right: 65px;
@@ -18,12 +26,15 @@
         padding-right: 100px;
     }
 
+    /* &--gutters-small > div {
+        margin-right: 45px;
+    } */
+
     &__b-margin-until-medium {
         margin-bottom: 1rem;
     }
     
     @mixin atMedium {
-
 
         &__b-margin-until-medium {
             margin-bottom: 0;
@@ -32,10 +43,10 @@
         &__medium-4 {
             float: left;
             width: 33.33%;
+        }
 
-            &--larger {
-                width: 37%;
-            }
+        &__medium-4--larger {
+            width: 37%;
         }
 
         &__medium-6 {
@@ -46,10 +57,63 @@
         &__medium-8 {
             float: left;
             width: 66.66%;
-
-            &--smaller {
-                width: 63%;
-            }
         }
-    } 
+
+        &__medium-8--smaller {
+            width: 63%;
+        }
+    }
+
+    @mixin atLarge {
+        
+        &__b-margin-until-large {
+            margin-bottom: 0;
+        }
+
+        &__large-4 {
+            float: left;
+            width: 33.33%;
+        }
+
+        &__large-4--larger {
+            width: 37%;
+        }
+
+        &__large-6 {
+            float: left;
+            width: 50%;
+        }
+    
+        &__large-8 {
+            float: left;
+            width: 66.66%;
+        }
+
+        &__large-8--smaller {
+            width: 63%;
+        }
+    }
+    
+    /* Begin Equal rules */
+    &--equal-height-at-medium{
+        @mixin atMedium{
+            display: flex;
+        }
+
+        & > div {
+            float: none;
+            display: flex;
+        }
+    }
+
+    &--equal-height-at-large{
+        @mixin atLarge{
+            display: flex;
+        }
+
+        & > div {
+            float: none;
+            display: flex;
+        }
+    }
 }
