--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -12,11 +12,13 @@
 @import "modules/_page-section";
 @import "modules/_headline";
 
-@import "modules/_row";
 @import "modules/_generic-content-container";
 @import "modules/_section-title";
 
 @import "modules/_feature-item";
+@import "modules/_testimonial";
+@import "modules/_row";
+
 
 @import "modules/_text-animation";
 @import "modules/_btn-animation";
