Completed Styling The Footer

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -13,6 +13,7 @@
 @import "modules/_testimonial";
 @import "modules/_row";
 @import "modules/_sprite";
+@import "modules/_site-footer";
 
 @import "modules/_text-animation";
 @import "modules/_btn-animation";
