--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -8,17 +8,22 @@
     &--overlay {
         width: 100%;
         height: 100%;
-        background: rgba(0, 0, 0, .25);
+        background: rgba(0, 0, 0, .35);
         position: relative;
     }
 
     &__text-content {
+        padding-top: 88px;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
         left: 0;
         width: 100%;
         text-align: center;
+
+        @mixin atMedium {
+            padding-top: 60px;
+        }
     }
 
     &__title {
