--- a/app/assets/styles/modules/_sprite.css
+++ b/app/assets/styles/modules/_sprite.css
@@ -2,77 +2,77 @@
 Instead edit gulp/templates/sprite */
 
         .icon {
-            background-image: url('/assets/images/sprites/sprite-d675eadb.svg');    
+            background-image: url('/assets/images/sprites/sprite-83f17d3c.svg');    
         }
     
-    .icon--clear-view-escapes {
-        width: 142.4px;
-        height: 59.53px;
+    .icon--YY-logo-white {
+        width: 157px;
+        height: 53px;
         background-position: 0 0;
     }
     
     .icon--comment {
         width: 64px;
         height: 64px;
-        background-position: 99.70443349753694% 0;
+        background-position: 100% 0;
     }
     
     .icon--facebook {
         width: 21.23px;
         height: 42.01px;
-        background-position: 26.040607071652357% 45.795830448496034%;
+        background-position: 44.570196712476424% 31.929634315320197%;
     }
     
     .icon--fire {
         width: 56px;
         height: 64px;
-        background-position: 0 99.56481481481481%;
+        background-position: 0 70.13888888888889%;
     }
     
     .icon--globe {
         width: 64px;
         height: 64px;
-        background-position: 27.586206896551722% 99.56481481481481%;
+        background-position: 25.806451612903224% 70.13888888888889%;
     }
     
     .icon--instagram {
         width: 42.01px;
         height: 42.01px;
-        background-position: 63.2917018534157% 49.234556504346486%;
+        background-position: 0 99.40357852882703%;
     }
     
     .icon--mail {
         width: 64px;
         height: 48px;
-        background-position: 0 48.00806451612903%;
+        background-position: 0 33.125%;
     }
     
     .icon--rain {
         width: 64px;
         height: 64px;
-        background-position: 99.70443349753694% 59.25925925925926%;
+        background-position: 100% 44.44444444444444%;
     }
     
     .icon--star {
         width: 64px;
         height: 64px;
-        background-position: 59.11330049261084% 99.56481481481481%;
+        background-position: 55.29953917050691% 70.13888888888889%;
     }
     
     .icon--twitter {
         width: 51.78px;
         height: 42.06px;
-        background-position: 94.04330452560171% 98.50700323226104%;
+        background-position: 27.92077480150074% 31.939255152464746%;
     }
     
     .icon--wifi {
         width: 60px;
         height: 64px;
-        background-position: 68.79227053140097% 0;
+        background-position: 71.04072398190046% 0;
     }
     
     .icon--youtube {
         width: 34.75px;
         height: 42px;
-        background-position: 36.69752421959096% 45.792307692307695%;
+        background-position: 17.05989847715736% 99.39759036144578%;
     }
