Toggle Menu Work

--- a/app/assets/styles/base/_variables.css
+++ b/app/assets/styles/base/_variables.css
@@ -1,8 +1,11 @@
-$mainBlue: #2f5572;
+$mainBlue: #FF6D24;
 
-$mainWhite: #fff;
+$mainWhite: #E2DED3;
+
+$mainBrown: #4E413B;
+$secondBrown: #857671;
 
 $mainOrange: #FF6D24;
 
-$mainBlack: #222831;
+$mainBlack: #4E413B;
 
