--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -3,13 +3,21 @@
     position: absolute;
     width: 100%;
     z-index: 2;
+    transition: background-color .3s ease-out;
+
+    &--is-expanded {
+        background-color: rgba($mainBlue, .55);
+    }
 
     @mixin atMedium {
-        background-color: rgba($mainOrange, .30);        
+        background-color: rgba($secondBrown, .30);        
     }
 
     &__btn-container {
-        float: right;
+
+        @mixin atMedium {
+            float: right;            
+        }
     }
 
     &__logo {
@@ -18,7 +26,7 @@
         left: 50%;
         transform: translateX(-50%) scale(.8);
         transform-origin: 50% 0;
-        background-color: $mainOrange;
+        background-color: $secondBrown;
         padding: 25px 36px;
 
         @mixin atMedium {
@@ -36,6 +44,7 @@
         height: 20px;
         background-color: $mainWhite;
         position: absolute;
+        z-index: 10;
         top: 10px;
         right: 10px;
 
@@ -45,10 +54,25 @@
     }
 
     &__menu-content {
-        display: none;
+        opacity: 0;
+        transform: scale(1.2);
+        transition: all .3s ease-out;
+        position: relative;
+        z-index: -10;
+        padding-top: 90px;
+        text-align: center;
 
         @mixin atMedium {
-            display: block;
+            opacity: 1;
+            z-index: 1;
+            padding-top: 0;
+            transform: scale(1);
+        }
+
+        &--is-visible {
+            opacity: 1;
+            z-index: 1;
+            transform: scale(1);
         }
     }
 
