--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -41,15 +41,52 @@
 
     &__menu-icon {
         width: 20px;
-        height: 20px;
-        background-color: $mainWhite;
+        height: 19px;
         position: absolute;
         z-index: 10;
         top: 10px;
         right: 10px;
 
+        &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 20px;
+            height: 3px;
+            background-color: $mainWhite;
+            transform-origin: 0 0;
+        }
+
+        &__middle {
+            position: absolute;
+            top: 8px;
+            left: 0;
+            width: 20px;
+            height: 3px;
+            background-color: $mainWhite;
+        }
+
+        &::after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 20px;
+            height: 3px;
+            background-color: $mainWhite;
+        }
+
         @mixin atMedium {
             display: none;
+        }
+    }
+
+    &__menu-icon--close-x {
+
+        &::before {
+            transform: rotate(45deg) scaleX(1.25);
+
         }
     }
 
