--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -56,6 +56,7 @@
             height: 3px;
             background-color: $mainWhite;
             transform-origin: 0 0;
+            transition: transform .3s ease-out;
         }
 
         &__middle {
@@ -65,6 +66,8 @@
             width: 20px;
             height: 3px;
             background-color: $mainWhite;
+            transition: all .3s ease-out;
+            transform-origin: 0 50%;
         }
 
         &::after {
@@ -75,6 +78,8 @@
             width: 20px;
             height: 3px;
             background-color: $mainWhite;
+            transform-origin: 0 100%;
+            transition: transform .3s ease-out;
         }
 
         @mixin atMedium {
@@ -86,7 +91,15 @@
 
         &::before {
             transform: rotate(45deg) scaleX(1.25);
+        }
 
+        .site-header__menu-icon__middle {
+            opacity: 0;
+            transform: scaleX(0);
+        }
+
+        &::after {
+            transform: rotate(-45deg) scaleX(1.25) translateY(1px);            
         }
     }
 
