--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -16,6 +16,7 @@
 @import "modules/_site-footer";
 @import "modules/_site-header";
 @import "modules/_primary-nav";
+@import "modules/_reveal-item";
 
 @import "modules/_text-animation";
 @import "modules/_btn-animation";
