--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -3,7 +3,7 @@
     height: 700px;
     width: 100%;
     background: url('/assets/images/hero--YuYu.jpg');
-    background-size: 100% 100%;
+    background-size: cover;
 
     &--overlay {
         width: 100%;
