--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,6 +1,6 @@
 .large-hero {
     background-size: cover;
-    height: 700px;
+    height: 90vh;
     width: 100%;
     background: url('/assets/images/hero--YuYu.jpg');
     background-size: cover;
