--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -17,6 +17,8 @@
 @import "modules/_site-header";
 @import "modules/_primary-nav";
 @import "modules/_reveal-item";
+@import "modules/_projects";
+
 
 @import "modules/_text-animation";
 @import "modules/_btn-animation";
