--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -40,6 +40,11 @@
             margin-bottom: 0;
         }
 
+        &__medium-3 {
+            float: left;
+            width: 25%;
+        }
+
         &__medium-4 {
             float: left;
             width: 33.33%;
@@ -68,6 +73,11 @@
         
         &__b-margin-until-large {
             margin-bottom: 0;
+        }
+
+        &__large-3 {
+            float: left;
+            width: 25%;
         }
 
         &__large-4 {
