--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -18,6 +18,8 @@
 @import "modules/_primary-nav";
 @import "modules/_reveal-item";
 @import "modules/_projects";
+@import "modules/_modal";
+@import "modules/_social-icons";
 
 
 @import "modules/_text-animation";
