--- a/app/assets/styles/modules/_sprite.css
+++ b/app/assets/styles/modules/_sprite.css
@@ -4,6 +4,10 @@ Instead edit gulp/templates/sprite */
         .icon {
             background-image: url('/assets/images/sprites/sprite-83f17d3c.svg');    
         }
+
+        .no-svg .icon {
+            background-image: url('/assets/images/sprites/sprite-83f17d3c.png');                
+        }
     
     .icon--YY-logo-white {
         width: 157px;
