--- a/app/assets/styles/modules/_sprite.css
+++ b/app/assets/styles/modules/_sprite.css
@@ -2,11 +2,11 @@
 Instead edit gulp/templates/sprite */
 
         .icon {
-            background-image: url('/assets/images/sprites/sprite-5120c040.svg');    
+            background-image: url('../../assets/images/sprites/sprite-5120c040.svg');    
         }
 
         .no-svg .icon {
-            background-image: url('/assets/images/sprites/sprite-5120c040.png');                
+            background-image: url('../../assets/images/sprites/sprite-5120c040.png');                
         }
     
     .icon--YY-logo-white {
