--- a/app/assets/styles/base/_mixins.css
+++ b/app/assets/styles/base/_mixins.css
@@ -1,17 +1,23 @@
 @define-mixin atSmall {
-    @media (min-width: 530px) {
+    @media (min-width: 26.25rem) {
+        @mixin-content;
+    }
+}
+
+@define-mixin atMediumSmall {
+    @media (min-width: 37.5rem) {
         @mixin-content;
     }
 }
 
 @define-mixin atMedium {
-    @media (min-width: 800px) {
+    @media (min-width: 56.25rem) {
         @mixin-content;
     }
 }
 
 @define-mixin atLarge {
-    @media (min-width: 1010px) {
+    @media (min-width: 75rem) {
         @mixin-content;
     }
 }
