--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -6,7 +6,7 @@
     transition: background-color .3s ease-out;
 
     &--is-expanded {
-        background-color: rgba($mainBlue, .55);
+        background-color: rgba(#232526, .55);
     }
 
     @mixin atMedium {
@@ -14,7 +14,7 @@
         background-color: rgba($secondBrown, .30);     
         
         &--dark {
-            background-color: rgba($mainBlack, .85);
+            background-color: rgba(#232526, .85);
         }
     }
 
@@ -32,8 +32,9 @@
         transform: translateX(-50%) scale(.8);
         transition: transform .3s ease-out;
         transform-origin: 50% 0;
-        background-color: $secondBrown;
-        padding: 25px 36px;
+        background: linear-gradient(to bottom, #232526, #414345);
+        border: 1px solid $mainOrange;        
+        padding: 22px 36px;
 
         @mixin atMedium {
             left: auto;
