--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -20,7 +20,7 @@
 @import "modules/_projects";
 @import "modules/_modal";
 @import "modules/_social-icons";
-
+@import "modules/_skill-section";
 
 @import "modules/_text-animation";
 @import "modules/_btn-animation";
