--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -1,4 +1,6 @@
+
 .btn {
+    background-color: $mainBlue;
     color: #fff;
     text-decoration: none;
     padding:.75rem 1.2rem;
@@ -12,6 +14,7 @@
 
     &--large {
         padding: 1.1rem 1.9rem;
+        /* border-radius: 100px; */
 
         @mixin atSmall {
             font-size: 1.25rem;
