--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,10 +1,11 @@
 .large-hero {
     background-size: cover;
     height: 100vh;
-    width: 100%;
+    width: auto;
     background: url('/assets/images/hero--YuYu.jpg');
     background-size: cover;
-
+    overflow: hidden;
+    
     &--overlay {
         width: 100%;
         height: 100%;
