--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -21,10 +21,6 @@
     &--gutters > div {
       padding-right: 65px;
     }
-
-    &--gutters-about > div :not(:last-child){
-      padding-right: 65px;
-    }
   
     &--gutters-large > div {
       padding-right: 100px;
@@ -37,34 +33,32 @@
     &__b-margin-until-medium {
       margin-bottom: 1rem;
     }
+  
 
-    &__medium-3 {
-      margin-left: auto;
-      margin-right: auto;
-      float: left;      
-      width: 100%;
-    }
-
-    
     @mixin atSmall {
       
-        &__medium-3 {
-          float: left;
-          width: 50%;
-        }
-  
+      &__b-margin-until-medium {
+        margin-bottom: 0;
       }
-
+  
+      &__medium-3 {
+        float: left;
+        width: 50%;
+      }
+    }
 
     @mixin atMediumSmall {
-
+      
+      &__b-margin-until-medium {
+        margin-bottom: 0;
+      }
+  
       &__medium-3 {
         float: left;
         width: 33.33%;
       }
-
     }
-  
+
 
     @mixin atMedium {
   
@@ -74,9 +68,9 @@
   
       &__medium-3 {
         float: left;
-        width: 50%;
+        width: 33.33%;
       }
-
+  
       &__medium-4 {
         float: left;
         width: 33.33%;
@@ -91,55 +85,53 @@
         width: 50%;
       }
   
-      /* &__medium-8 {
+      &__medium-8 {
         float: left;
         width: 66.66%;
       }
   
       &__medium-8--smaller {
         width: 63%;
-      } */
+      }
   
     }
-
+  
     @mixin atLarge {
-      
-          &__b-margin-until-large {
-            margin-bottom: 0;
-          }
+  
+      &__b-margin-until-large {
+        margin-bottom: 0;
+      }
 
-          &__medium-3 {
-            float: left;
-            width: 25%;
-          }
-      
-          &__large-4 {
-            float: left;
-            width: 33.33%;
-          }
-      
-          &__large-4--larger {
-            width: 37%;
-          }
-      
-          &__large-6 {
-            float: left;
-            width: 50%;
-          }
-      
-          &__large-8 {
-            float: left;
-            width: 66.66%;
-          }
-      
-          &__large-8--smaller {
-            width: 63%;
-          }
-      
-        }
+      &__medium-3 {
+        float: left;
+        width: 25%;
+      }
+  
+      &__large-4 {
+        float: left;
+        width: 33.33%;
+      }
+  
+      &__large-4--larger {
+        width: 37%;
+      }
+  
+      &__large-6 {
+        float: left;
+        width: 50%;
+      }
+  
+      &__large-8 {
+        float: left;
+        width: 66.66%;
+      }
+  
+      &__large-8--smaller {
+        width: 63%;
+      }
+  
+    }
     
-
-
     /* Begin Equal Height Rules */
     .flexbox &--equal-height-at-medium {
       @mixin atMedium {
@@ -152,7 +144,7 @@
       }
   
     }
-
+  
     .flexbox &--equal-height-at-large {
       @mixin atLarge {
         display: flex;
