--- a/app/assets/styles/modules/_site-footer.css
+++ b/app/assets/styles/modules/_site-footer.css
@@ -1,6 +1,6 @@
 .site-footer {
-    background-color: $mainBlue;
-    color: white;
+    background-color: $mainBlack;
+    color: $mainOrange;
     padding: .5rem 0;
     text-align: center;
 
