--- a/app/assets/styles/modules/_skill-section.css
+++ b/app/assets/styles/modules/_skill-section.css
@@ -12,10 +12,14 @@
         font-size: 1rem;
         font-weight: 300;
         
+        
+        @mixin atMediumSmall {
+            width: 75%; 
+        }
 
         @mixin atMedium {
             font-size: 1rem;
-            width: 80%; 
+            width: 90%; 
         }
 
         /* &--no-margin-top {
@@ -40,8 +44,11 @@
         margin-right: auto;
         font-size: .8rem;
 
+        @mixin atMediumSmall {
+            width: 75%; 
+        }
         @mixin atMedium {
-            width: 80%;    
+            width: 90%;    
             font-weight: 500;   
             font-size: 1rem;
             
