--- a/app/assets/styles/modules/_headline.css
+++ b/app/assets/styles/modules/_headline.css
@@ -1,10 +1,14 @@
 .headline {
-    font-size: 1.9rem;
+    font-size: 2.2rem;
     font-weight: 300;
     color: $mainBlue;
 
     @mixin atSmall {
-        font-size: 2.875rem;
+        font-size: 2.75rem;
+    }
+
+    @mixin atMedium {
+        font-size: 3.25rem;
     }
 
     &--centered {
