--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,22 +1,22 @@
 .large-hero {
     /* height: 100vh;
     width: 100%; */
-    background: url('/assets/images/hero--YuYu.jpg');
-    background-size: cover;    
+    height: 95vh;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, .0), rgba(59, 59, 59, .8)), url('/assets/images/hero--YuYu.jpg');
+    background-size: cover;
+    background-position: top;    
     position: relative;
 
-    /* position: absolute; */
-    /* top: 0;
-    left: 0; */
-    height: 100vh;
-    width: auto;
-    overflow: hidden;
-    object-fit: cover;
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+
+
+    /* overflow: hidden;
+    object-fit: cover; */
     
     &--overlay {
         width: 100%;
         height: 100%;
-        background: rgba(0, 0, 0, .35);
+        /* background: rgba(0, 0, 0, .35); */
         position: relative;
     }
 
@@ -35,7 +35,7 @@
     }
 
     &__title {
-        font-weight: 300;
+        font-weight: 600;
         color: $mainOrange;
         font-size: 2.2rem;
         margin: 0;
