--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,3 +1,5 @@
+/*
+
 .row {
   
     @mixin clearfix;
@@ -33,42 +35,19 @@
     &__b-margin-until-medium {
       margin-bottom: 1rem;
     }
-  
 
     @mixin atSmall {
-      
-      &__b-margin-until-medium {
-        margin-bottom: 0;
-      }
-  
-      &__medium-3 {
-        float: left;
-        width: 50%;
-      }
+
+          &__small-4 {
+            float: left;
+            width: 50%;
+          }
     }
-
-    @mixin atMediumSmall {
-      
-      &__b-margin-until-medium {
-        margin-bottom: 0;
-      }
   
-      &__medium-3 {
-        float: left;
-        width: 50%;
-      }
-    }
-
-
     @mixin atMedium {
   
       &__b-margin-until-medium {
         margin-bottom: 0;
-      }
-  
-      &__medium-3 {
-        float: left;
-        width: 33.33%;
       }
   
       &__medium-4 {
@@ -95,44 +74,39 @@
       }
   
     }
-  
-    @mixin atLarge {
-  
-      &__b-margin-until-large {
-        margin-bottom: 0;
-      }
 
-      &__medium-3 {
-        float: left;
-        width: 25%;
-      }
-  
-      &__large-4 {
-        float: left;
-        width: 33.33%;
-      }
-  
-      &__large-4--larger {
-        width: 37%;
-      }
-  
-      &__large-6 {
-        float: left;
-        width: 50%;
-      }
-  
-      &__large-8 {
-        float: left;
-        width: 66.66%;
-      }
-  
-      &__large-8--smaller {
-        width: 63%;
-      }
-  
-    }
+    @mixin atLarge {
+      
+          &__b-margin-until-large {
+            margin-bottom: 0;
+          }
+      
+          &__large-4 {
+            float: left;
+            width: 25%;
+          }
+      
+          &__large-4--larger {
+            width: 37%;
+          }
+      
+          &__large-6 {
+            float: left;
+            width: 50%;
+          }
+      
+          &__large-8 {
+            float: left;
+            width: 66.66%;
+          }
+      
+          &__large-8--smaller {
+            width: 63%;
+          }
+      
+        }
     
-    /* Begin Equal Height Rules */
+    /* Begin Equal Height Rules
     .flexbox &--equal-height-at-medium {
       @mixin atMedium {
         display: flex;
@@ -144,7 +118,7 @@
       }
   
     }
-  
+
     .flexbox &--equal-height-at-large {
       @mixin atLarge {
         display: flex;
@@ -158,3 +132,5 @@
     }
   
   }
+
+  */
