--- a/app/assets/styles/modules/_site-footer.css
+++ b/app/assets/styles/modules/_site-footer.css
@@ -8,7 +8,12 @@
         display: block;
         margin-bottom: 1rem;
         font-weight: 200;
+        font-size: .8rem;
 
+        @mixin atSmall {
+            font-size: 1rem;
+        }
+        
         @mixin atMedium {
             display: inline;
             margin-bottom: 0;
