--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -2,7 +2,7 @@
     /* height: 100vh;
     width: 100%; */
     height: 95vh;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, .0), rgba(59, 59, 59, .8)), url('/assets/images/hero--YuYu.jpg');
+    background-image: linear-gradient(to left, rgba(0, 0, 0, .0), rgba(59, 59, 59, .8)), url('/assets/images/hero--YuYu.jpg');
     background-size: cover;
     background-position: top;    
     position: relative;
